--- a/_config.yml
+++ b/_config.yml
@@ -12,20 +12,20 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 remote_theme             : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "modelika" #"default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "dirt" #"default", "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Modelika"
+title                    : "Artomatica"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Modelika"
-description              : "3d printing services"
+name                     : "Artomatica"
+description              : "The better future is now"
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
-logo                     : /assets/images/modelika-logo-plain.svg
+logo                     : /assets/images/artomatica-logo-plain.svg
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
@@ -107,10 +107,10 @@ analytics:
 
 # Site Author
 author:
-  name             : "Modelika"
+  name             : "Artomatica"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Engineer"
-  location         : "Budapest"
+  bio              : 
+  location         :
   email            :
   links:
     - label: "Email"
@@ -137,10 +137,10 @@ footer:
   links:
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
-      url: https://twitter.com/modelika3d
+      # url: https://twitter.com/modelika3d
     - label: "Facebook"
       icon: "fab fa-fw fa-facebook-square"
-      url: https://www.facebook.com/modelika3d
+      # url: https://www.facebook.com/modelika3d
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
       # url:
