--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@ minimal_mistakes_skin    : "dirt" #"default", "air", "aqua", "contrast", "dark",
 locale                   : "en-US"
 title                    : "Artomatica"
 title_separator          : "-"
-subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Artomatica"
+subtitle                 : "The better future is now"
+name                     : "Artomatica LLC"
 description              : "The better future is now"
-url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://artomatica.com"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
@@ -152,7 +152,7 @@ footer:
       # url:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
-      url: https://www.instagram.com/modelika3d/
+      # url: https://www.instagram.com/modelika3d/
 
 
 # Reading Files
